added kyle to sos speaker list
added kyle to sos speaker list

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2996,7 +2996,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-19T16:43:32Z</date>
+						<date>2018-07-19T18:23:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3251,6 +3251,26 @@
 								<key>Size</key>
 								<integer>354232</integer>
 							</dict>
+							<key>files/stacks-image-c8d05d0-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gHccM48+cLRU
+								AG+GE2HUdg==
+								</data>
+								<key>Size</key>
+								<integer>87781</integer>
+							</dict>
+							<key>files/stacks-image-c8d05d0-261x251@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								mRgndT4jFIzn
+								TuBSisqjPg==
+								</data>
+								<key>Size</key>
+								<integer>326541</integer>
+							</dict>
 							<key>files/stacks-image-c9f8f3e-300x168.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3260,6 +3280,26 @@
 								</data>
 								<key>Size</key>
 								<integer>36650</integer>
+							</dict>
+							<key>files/stacks-image-f24159b-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gHccM48+cLRU
+								AG+GE2HUdg==
+								</data>
+								<key>Size</key>
+								<integer>87781</integer>
+							</dict>
+							<key>files/stacks-image-f24159b-261x251@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								mRgndT4jFIzn
+								TuBSisqjPg==
+								</data>
+								<key>Size</key>
+								<integer>326541</integer>
 							</dict>
 							<key>files/stacks-image-fedaa0e-259x250.png</key>
 							<dict>
@@ -3285,31 +3325,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xFEsO6b9Q3B/
-								+kMhMxcvzQ==
+								wRx5ra/sTjuP
+								gZohZpVlvQ==
 								</data>
 								<key>Size</key>
-								<integer>168076</integer>
+								<integer>172513</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								O8yHpfhU6FUe
-								VxJuFOgoPA==
+								FqG0drOaAuaU
+								PwPDWvJSpw==
 								</data>
 								<key>Size</key>
-								<integer>26169</integer>
+								<integer>26351</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4Zdbgf+IgPuv
-								3mZreyWueg==
+								nwKtlzNO6ojJ
+								wrGbfWmzsQ==
 								</data>
 								<key>Size</key>
-								<integer>106699</integer>
+								<integer>110616</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4962,7 +5002,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-19T13:58:01Z</date>
+						<date>2018-07-19T18:23:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5317,6 +5357,46 @@
 								<key>Size</key>
 								<integer>354232</integer>
 							</dict>
+							<key>files/stacks-image-c8d05d0-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gHccM48+cLRU
+								AG+GE2HUdg==
+								</data>
+								<key>Size</key>
+								<integer>87781</integer>
+							</dict>
+							<key>files/stacks-image-c8d05d0-261x251@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								mRgndT4jFIzn
+								TuBSisqjPg==
+								</data>
+								<key>Size</key>
+								<integer>326541</integer>
+							</dict>
+							<key>files/stacks-image-f24159b-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gHccM48+cLRU
+								AG+GE2HUdg==
+								</data>
+								<key>Size</key>
+								<integer>87781</integer>
+							</dict>
+							<key>files/stacks-image-f24159b-261x251@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								mRgndT4jFIzn
+								TuBSisqjPg==
+								</data>
+								<key>Size</key>
+								<integer>326541</integer>
+							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5351,21 +5431,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BbohiXnELAfM
-								xvbIwDoItg==
+								OerJ9NUwVN/Z
+								Fbwa9US44w==
 								</data>
 								<key>Size</key>
-								<integer>182445</integer>
+								<integer>186988</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mRZ+xa8kAKpV
-								URUh/UmdCg==
+								PsGFY/b1LGl1
+								9P+jvUeI9A==
 								</data>
 								<key>Size</key>
-								<integer>30157</integer>
+								<integer>30339</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -5381,11 +5461,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ka4MoRgayt0a
-								xj0ATNHXWA==
+								VRO1i9bVzSCu
+								XqSkym0dUw==
 								</data>
 								<key>Size</key>
-								<integer>134162</integer>
+								<integer>138288</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9219,7 +9299,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAgHubW/G/gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAgIdbQWzwgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -9230,7 +9310,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCAe5tb9KGA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCAh1tBcSKA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
