added Mohit Abstract
added Mohit Abstract

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-19T18:23:47Z</date>
+						<date>2018-07-19T18:52:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,21 +462,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OerJ9NUwVN/Z
-								Fbwa9US44w==
+								8P1efuMqA+hR
+								H0pQY6I/tg==
 								</data>
 								<key>Size</key>
-								<integer>186988</integer>
+								<integer>187155</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PsGFY/b1LGl1
-								9P+jvUeI9A==
+								44Bw940dJVjM
+								pSM8dOexdA==
 								</data>
 								<key>Size</key>
-								<integer>30339</integer>
+								<integer>30521</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -492,11 +492,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VRO1i9bVzSCu
-								XqSkym0dUw==
+								Arau9ZzzDMO7
+								aHWa01UbSA==
 								</data>
 								<key>Size</key>
-								<integer>138288</integer>
+								<integer>143244</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
