--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-19T18:23:47Z</date>
+						<date>2018-07-19T18:52:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nwKtlzNO6ojJ
-								wrGbfWmzsQ==
+								Zlba3Z13rnvO
+								QfsMaGYXeg==
 								</data>
 								<key>Size</key>
-								<integer>110616</integer>
+								<integer>112663</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
