Typo fix and Publications page stuff

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1842,7 +1842,7 @@
 					<key>page23 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T17:44:07Z</date>
+						<date>2018-07-25T16:54:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4716,7 +4716,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T14:54:58Z</date>
+						<date>2018-07-25T16:54:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4945,11 +4945,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V8XpxC1cd97J
-								TYjeD29Jew==
+								CJfL5TuTGkxy
+								j9NgDh4TlQ==
 								</data>
 								<key>Size</key>
-								<integer>90645</integer>
+								<integer>90644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7960,7 +7960,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T14:54:58Z</date>
+						<date>2018-07-25T16:54:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8009,11 +8009,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RJTIt1rpvzF2
-								eNEURf6bZg==
+								9yMFbkVFK2nE
+								PHvrXKMyyw==
 								</data>
 								<key>Size</key>
-								<integer>3754</integer>
+								<integer>3786</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8062,7 +8062,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-18T16:10:22Z</date>
+						<date>2018-07-25T16:54:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9101,11 +9101,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								L2HjKW4hZl19
-								FhldVRXEmw==
+								uaxP1xgHc22w
+								1VnIIxBmvw==
 								</data>
 								<key>Size</key>
-								<integer>3771</integer>
+								<integer>3734</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9209,8 +9209,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB/2fS/
-				JYmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCEcW39
+				MteAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -9220,7 +9220,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB/2fS/KW+A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCEcW39NviA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
