--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-23T17:07:17Z</date>
+						<date>2018-07-27T20:57:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g05vsO7vS5+w
-								lGF6bxlLxA==
+								SrHwB7Ha6TiM
+								rmjyJPZ3cg==
 								</data>
 								<key>Size</key>
-								<integer>142110</integer>
+								<integer>148953</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WoZkXUChhODH
-								HdUZ1rThmA==
+								AdMTRXts54hJ
+								UZoKLj0tyg==
 								</data>
 								<key>Size</key>
-								<integer>78315</integer>
+								<integer>82004</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
