--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-23T17:07:17Z</date>
+						<date>2018-07-30T16:09:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -384,11 +384,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jEHrmTEYpJ7g
-								9GvxurrZsg==
+								6NdMH24FoxrE
+								dfLmaXVcsg==
 								</data>
 								<key>Size</key>
-								<integer>115036</integer>
+								<integer>115038</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
