--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-30T17:06:15Z</date>
+						<date>2018-07-30T17:32:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DCRCKATDF1sC
-								y7gVQLqbSg==
+								108muRwt5uO5
+								apPrOHQb8w==
 								</data>
 								<key>Size</key>
-								<integer>64525</integer>
+								<integer>64769</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
